Fix image bug for modal
fixed bug on mobile where image width cut off && modal close bug

--- a/css/styles.css
+++ b/css/styles.css
@@ -62,19 +62,25 @@
 	left: 0;
 	right: 0;
 	background-color: #000000dd;
+	height: 100vh;
+	width: 100vw;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	cursor: pointer;
+	z-index: 10;
 }
 
 .modal-img-wrap {
 	max-width: 80%;
 	max-height: 80%;
-	overflow: scroll;
+	overflow: hidden;
+	pointer-events: none;
 }
 
 .modal-img {
 	width: 100%;
 	height: 80vh;
-	object-fit: cover;
+	object-fit: contain;
+	pointer-events: none;
 }
